# drone

./: .gitignore  .gitmodules  README.md  README.txt  count_lines.sh  gitpush.py  gitupdate.py  init  init.py
code/: build  drone_deploy.sh  init  (+3 more)
code/general/: CMakeLists.txt  build  build.py  install_toolchain  toolchain.cmake
code/general/communications/: CMakeLists.txt
code/general/communications/drone/: CMakeLists.txt  build.py  rebuild.py
code/general/communications/drone/include/: drone_protocol_config.h  protocol.h
code/general/communications/drone/pc_debugger/: CMakeLists.txt
code/general/communications/drone/pc_debugger/src/: connection.c  connection.h
code/general/communications/drone/src/: drone_protocol_config.h  main.c  protocol.c  protocol.h
code/general/communications/drone_protocol/: CMakeLists.txt
code/general/communications/drone_protocol/src/: protocol.c  protocol.h
code/general/communications/ground/: CMakeLists.txt  build.py  rebuild.py
code/general/communications/ground/pc_side/: CMakeLists.txt
code/general/communications/ground/pc_side/include/: connection.h  ground_protocol_config.h  input_poll.h  protocol.h  test_config.h  util.h
code/general/communications/ground/pc_side/src/: connection.c  connection.h  ground_protocol_config.h  input_poll.c  input_poll.h  main.c  protocol.c  protocol.h  test_config.h  test_protocol.c  util.c  util.h
code/general/communications/ground/pico_side/: CMakeLists.txt
code/general/communications/ground/pico_side/include/: pico_transceiver.h
code/general/communications/ground/pico_side/src/: pico_transceiver.c
code/general/communications/ground_protocol/: CMakeLists.txt  build.py  rebuild.py
code/general/communications/ground_protocol/pc_side/src/: ground_protocol_config.h  protocol.c  protocol.h
code/general/communications/ground_protocol/src/: connection.c  connection.h  ground_protocol_config.h  pico_transceiver.c  util.c  util.h
code/general/communications/nrf24/: CMakeLists.txt  nrf24.c  nrf24.h  nrf24_config.h
code/general/communications/nrf24/src/: nrf24.c
code/general/communications/protocol_util/: protocol_util.c  protocol_util.h  test  test.c  test.sh
code/general/communications/protocol_util/src/: protocol_util.c  test  test.c
code/general/controls/: CMakeLists.txt  controls_math.c  controls_math.h  tests.c
code/general/controls/include/: controller.h  controller_config.h  controls_math.h
code/general/controls/pwm_pico/include/: pwm_pico.h
code/general/controls/pwm_pico/src/: pwm_pico.c
code/general/controls/src/: controller.c  controls_math.c
code/general/controls/tests/: mathTest
code/general/debugging_util/: debugging_config.h  debugging_util.c  debugging_util.h
code/general/debugging_util/include/: debugging_config.h  debugging_util.h
code/general/debugging_util/src/: debugging_util.c
code/general/diagnostics/include/: diagnostics.h
code/general/diagnostics/src/: diagnostics.c
code/general/drone/: CMakeLists.txt
code/general/drone/include/: config.h  drone.h  drone_protocol_config.h  protocol.h
code/general/drone/src/: drone.c  main.c
code/general/drone_controls/: controls_math.c  controls_math.h  notes.md
code/general/encoding/: CMakeLists.txt
code/general/encoding/include/: encoding.h
code/general/encoding/src/: encoding.c  test.c
code/general/ground/: CMakeLists.txt
code/general/ground/pc/: CMakeLists.txt  update_shaders.sh
code/general/ground/pc/include/: colors.h  ground_protocol_config.h  gui_app.h  gui_math.h  protocol.h  test_config.h  util.h
code/general/ground/pc/shaders/: shader.frag  shader.vert
code/general/ground/pc/src/: config.h  main.c
code/general/ground/pico/: CMakeLists.txt
code/general/ground/pico/include/: config.h
code/general/ground/pico/lib/: ground_protocol_pico.uf2  ground_protocol_pico_test.uf2
code/general/ground/pico/src/: main.c
code/general/gui/: CMakeLists.txt  build.py  rebuild.py  test.c  test.sh
code/general/gui/include/: colors.h  gui_app.h  gui_config.h  gui_math.h
code/general/gui/shaders/: hud_roll.vert  shader.frag  shader.vert  text.vert
code/general/gui/src/: +  config.h  glad.c  gui_app.c  gui_app.h  gui_math.c  gui_math.h  input_poll.c  main.c  math_test.c  shader.vert  test  test.sh  util.h
code/general/math/: general_math.c  general_math.h
code/general/math/include/: general_math.h
code/general/math/src/: general_math.c
code/general/sensors/: CMakeLists.txt  config.h  imu.c  sensors.c  sensors.h
code/general/sensors/include/: config.h  imu.h  sensors.h  sensors_config.h
code/general/sensors/src/: imu.c  sensors.c
code/general/state/: drone_states.h
code/general/state/include/: drone_states.h
code/pc/: CMakeLists.txt
code/pc/shader_backup/: hud_throttle.vert  shader.frag
code/pc/shaders/: hud.frag  hud_rect.vert
code/pc/src/: main.c
code/pc/src/communications/: connection.c  connection.h  main.c  protocol.c  protocol.h  util.c  util.h
code/pc/src/communications/test_include/: util.h
code/pc/src/communications/test_src/: test_protocol.c
code/pc/src/gui/: gui_app.c  gui_app.h  gui_test.c  math_test.c
code/pc/src/gui/glad/: glad.h
code/pc/src/gui/shaders/: hud_lines.vert
code/pico/drone/: CMakeLists.txt
code/pico/drone/pc_debugger/src/: config.h  main.c
code/pico/drone/src/: drone.c  drone.h  main.c
code/pico/drone/src/communications/: protocol.c  protocol.h
code/pico/drone/src/controls/: controller.c  controller.h  controls_math.c
code/pico/drone/src/sensors/: imu.c  imu.h  sensors.c  sensors.h
code/pico/pc_receiver/: CMakeLists.txt
code/pico/pc_receiver/src/: config.h  input_poll.h  main.c
code/pico/pc_side/: CMakeLists.txt
code/pico/pc_side/src/: main.c  util.h
code/pico/pico_receiver/: CMakeLists.txt
code/pico/pico_receiver/src/: main.c
code/pico/transceiver/: CMakeLists.txt
code/pico/transceiver/src/: main.c  pico_transceiver.c  pico_transceiver.h
code/pico/transceiver/test/: main.c
code/pico_test/pico_side/: CMakeLists.txt
code/pico_test/pico_side/src/: config.h  main.c  nrf24.c  nrf24.h
(+42 files in other folders)
